--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   flutter_google_places: ^0.3.0
   google_api_headers: ^1.5.0
   google_maps_webservice: ^0.0.19
+  marquee: ^2.2.3
+  dotted_line: ^3.1.0
+  dotted_border: ^2.0.0+3
 
 
 dev_dependencies:
