--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.1 <3.0.0"
+  sdk: ">=2.19.1 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,22 +35,22 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.5
-  provider: ^6.0.3
-  intl: ^0.17.0
-  easy_localization: ^3.0.1
-  flutter_inset_box_shadow: ^1.0.8
+  provider: ^6.0.5
+  intl: ^0.18.0
   http: ^0.13.5
-  number_paginator: ^0.2.2
+  number_paginator: ^0.2.3
   geolocator: ^9.0.2
   geocoding: ^2.0.5
-  google_maps_flutter: ^2.2.1
+  google_maps_flutter: ^2.2.3
   flutter_polyline_points: ^1.0.0
   flutter_google_places: ^0.3.0
-  google_api_headers: ^1.5.0
+  google_api_headers: ^1.5.0+1
   google_maps_webservice: ^0.0.19
   marquee: ^2.2.3
   dotted_line: ^3.1.0
   dotted_border: ^2.0.0+3
+  fluttertoast: ^8.1.3
+  readmore: ^2.2.0
 
 
 dev_dependencies:
